Fix Magic Mouse history swiping bug.

Magic Mouse gestures don't cause -touches*WithEvent: events to be sent down the
responder chain. As such, all state related to Magic Mouse gestures needs to be
reset during -beginGestureWithEvent:.

BUG=317161

Review URL: https://codereview.chromium.org/821173003

Cr-Commit-Position: refs/heads/master@{#311762}

Former-commit-id: de515231c665422838bf93883a126b154d2e65ff